# src/modules/auth/auth.controller.ts
@@ -1,18 +1,35 @@
-import { Body, Controller, Post } from '@nestjs/common';
+import { Body, Controller, Get, Post, Req, Res, UseGuards } from '@nestjs/common';
 import { AuthService } from './auth.service';
-import { ApiBody, ApiConsumes, ApiTags } from '@nestjs/swagger';
-import { AuthDto } from './dto/auth.dto';
+import { ApiBearerAuth, ApiBody, ApiConsumes, ApiTags } from '@nestjs/swagger';
+import { AuthDto, CheckOtpDto } from './dto/auth.dto';
 import { SwaggerConsumes } from 'src/common/enums/swagger-consume.enum';
+
+import { CookieKeys } from 'src/common/enums/cookie.enum';
+import { Request, Response } from 'express';
+import { AuthGuard } from './guards/auth.guard';
 
 @Controller('auth')
 @ApiTags('auth')
 export class AuthController {
   constructor(private readonly authService: AuthService) {}
+
   @Post(`user-esxistence`)
   @ApiConsumes(SwaggerConsumes.URLENCODED, SwaggerConsumes.JSON)
   @ApiBody({ type: AuthDto })
-  userExistence(@Body() authDto: AuthDto) {
-    const result = this.authService.userExistence(authDto);
-    return result;
+  async userExistence(@Body() authDto: AuthDto, @Res() res: Response) {
+    return this.authService.userExistence(authDto, res);
+  }
+
+  @Post(`check-otp`)
+  @ApiConsumes(SwaggerConsumes.URLENCODED, SwaggerConsumes.JSON)
+  async checkOtp(@Body() CheckOtpDto: CheckOtpDto) {
+    return this.authService.checkOtp(CheckOtpDto.code);
+  }
+
+  @Get('check-login')
+  @ApiBearerAuth("Authorization")
+  @UseGuards(AuthGuard)
+  async checkLogin(@Req() req: Request) {
+    return req.user;
   }
 }
